[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Luca Baggi", email = "57922983+baggiponte@users.noreply.github.com"},
]
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "scikit-learn>=1.1.3",
    "pandas>=1.5.2",
    "numpy>=1.23.5",
]

[project.optional-dependencies]
eda = [
    "matplotlib>=3.6.2",
    "seaborn>=0.12.1",
]

[tool.pdm.dev-dependencies]
ide = [
    "jupyterlab>=4.0.7",
    "nbstripout>=0.6.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
